# kokkos-extended-precision-demo

./: .gitignore  CLAUDE.md  CMakeLists.txt  PORT_NOTES.md  README.md
scripts/: build_with_kokkos.sh  gen_ff_constants.cpp  probe_op.cpp  run_all_complex_ops.sh  run_all_dd_complex_ops.sh  run_all_dd_ops.sh  run_all_ff_complex_ops.sh  run_all_ff_ops.sh  run_all_ops.sh  test_ffmul.cpp
src/: demo_complex.cpp  demo_dd_complex.cpp  demo_dd_real.cpp  demo_ff_complex.cpp  demo_ff_real.cpp  demo_real.cpp
